# irondragon

./: .Cargo.toml.un~  .gitignore  .travis.yml  Cargo.toml  Cargo.toml~  README.md  bootstapdeps.ps1  daemonizedragon.sh  deployfe.sh  dragonschema.fzz  package.json
.cargo/: config
bower_components/formsy-react/: .bower.json
bower_components/react/: .bower.json
bower_components/react-forms/: .bower.json
docs/: CNAME  index.html
irondragonfe/: README.md  index.html  package-lock.json  package.json
irondragonfe/src/: App.vue  main.js
irondragonfe/src/components/: ControlView.vue  HomeView.vue  LimbView.vue  RiddleView.vue
irondragonfe/src/router/: index.js
irondragonfe/static/: manifest.json
src/: .main.rs.un~  main.rs  main.rs~  sysfstest.rs  test.rs
src/actorimpl/: common.rs  dragon.rs  mod.rs  rpi.rs  sound.rs
src/gpioaccess/: mod.rs
src/gpioaccess/proxyimpl/: linux.rs  nonlinux.rs  unix.rs  win.rs
src/tests/: mod.rs
src/tests/sysfstest/: linuxsysfs.rs  mod.rs  unixsysfs.rs
static/: index.html
